[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/objects/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/KamonKey.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/CaveDoorStart.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/HUD/MobileControlsHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/CaveLevels/CaveLevelBossScene.gd" type="Script" id=5]
[ext_resource path="res://assets/art/tilesets/cave-level/CaveLevelTileset.tres" type="TileSet" id=6]
[ext_resource path="res://assets/art/tilesets/cave-level/CaveLevelBackgroundTileset.tres" type="TileSet" id=7]
[ext_resource path="res://src/actors/cave-level-boss/CaveLevelBoss.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/objects/camera-effects/ScreenShake.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/utility/Geometry2D.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 536, 168 )

[node name="CaveLevelBossScenePlayground" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 400.0 ]
}

[node name="TempSpawnPosition" type="Position2D" parent="."]
position = Vector2( 504, 128 )
rotation = 1.57079

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobileControlsHUD" parent="." instance=ExtResource( 4 )]

[node name="InteractiveProps" type="Node" parent="."]

[node name="KamonKey" parent="InteractiveProps" instance=ExtResource( 2 )]
position = Vector2( 568, 40 )
frame = 4

[node name="Door" parent="InteractiveProps" instance=ExtResource( 1 )]
position = Vector2( 1008, 224 )

[node name="TileMapBg" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0 )

[node name="TileMapWorld" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -196609, 1610612750, 0, -262144, 1610612750, 0, 327657, 11, 0, 327658, 11, 0, 327659, 11, 0, 327660, 11, 0, 327661, 11, 0, 327662, 11, 0, 327663, 11, 0, 327664, 11, 0, 327665, 11, 0, 327666, 11, 0, 327667, 11, 0, 327668, 11, 0, 327669, 11, 0, 327670, 11, 0, 327671, 11, 0, 327672, 11, 0, 327673, 11, 0, 327674, 11, 0, 327675, 11, 0, 327676, 11, 0, 327677, 11, 0, 327678, 11, 0, 327679, 11, 0, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262147, 11, 0, 262148, 11, 0, 262149, 11, 0, 262150, 11, 0, 262151, 11, 0, 262152, 11, 0, 262153, 11, 0, 262154, 11, 0, 262155, 11, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 0, 262160, 11, 0, 262161, 11, 0, 262162, 11, 0, 262163, 11, 0, 262164, 11, 0, 262165, 11, 0, 262166, 11, 0, 262167, 11, 0, 262168, 11, 0, 262169, 11, 0, 262170, 11, 0, 262171, 11, 0, 262172, 11, 0, 262173, 11, 0, 262174, 11, 0, 262175, 11, 0, 262176, 11, 0, 262177, 11, 0, 262178, 11, 0, 262179, 11, 0, 262180, 11, 0, 262181, 11, 0, 262182, 11, 0, 262183, 11, 0, 262184, 11, 0, 262185, 11, 0, 262186, 11, 0, 262187, 11, 0, 262188, 11, 0, 262189, 11, 0, 262190, 11, 0, 262191, 11, 0, 262192, 11, 0, 262193, 11, 0, 262194, 11, 0, 262195, 11, 0, 262196, 11, 0, 262197, 11, 0, 262198, 11, 0, 262199, 11, 0, 262200, 11, 0, 262201, 11, 0, 262202, 11, 0, 262203, 11, 0, 262204, 11, 0, 262205, 11, 0, 262206, 11, 0, 262207, 11, 0, 262208, 11, 0, 262209, 11, 0, 393193, 11, 0, 393194, 11, 0, 393195, 11, 0, 393196, 11, 0, 393197, 11, 0, 393198, 11, 0, 393199, 11, 0, 393200, 11, 0, 393201, 11, 0, 393202, 11, 0, 393203, 11, 0, 393204, 11, 0, 393205, 11, 0, 393206, 11, 0, 393207, 11, 0, 393208, 11, 0, 393209, 11, 0, 393210, 11, 0, 393211, 11, 0, 393212, 11, 0, 393213, 11, 0, 393214, 11, 0, 393215, 11, 0, 327680, 11, 0, 327681, 11, 0, 327682, 11, 0, 327683, 11, 0, 327684, 11, 0, 327685, 11, 0, 327686, 11, 0, 327687, 11, 0, 327688, 11, 0, 327689, 11, 0, 327690, 11, 0, 327691, 11, 0, 327692, 11, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 11, 0, 327697, 11, 0, 327698, 11, 0, 327699, 11, 0, 327700, 11, 0, 327701, 11, 0, 327702, 11, 0, 327703, 11, 0, 327704, 11, 0, 327705, 11, 0, 327706, 11, 0, 327707, 11, 0, 327708, 11, 0, 327709, 11, 0, 327710, 11, 0, 327711, 11, 0, 327712, 11, 0, 327713, 11, 0, 327714, 11, 0, 327715, 11, 0, 327716, 11, 0, 327717, 11, 0, 327718, 11, 0, 327719, 11, 0, 327720, 11, 0, 327721, 11, 0, 327722, 11, 0, 327723, 11, 0, 327724, 11, 0, 327725, 11, 0, 327726, 11, 0, 327727, 11, 0, 327728, 11, 0, 327729, 11, 0, 327730, 11, 0, 327731, 11, 0, 327732, 11, 0, 327733, 11, 0, 327734, 11, 0, 327735, 11, 0, 327736, 11, 0, 327737, 11, 0, 327738, 11, 0, 327739, 11, 0, 327740, 11, 0, 327741, 11, 0, 327742, 11, 0, 327743, 11, 0, 327744, 11, 0, 327745, 11, 0, 458729, 11, 0, 393218, 11, 0, 393219, 11, 0, 393220, 11, 0, 393230, 11, 0, 393231, 11, 0, 393232, 11, 0, 393233, 11, 0, 393234, 11, 0, 393235, 11, 0, 393236, 11, 0, 393237, 11, 0, 393238, 11, 0, 393239, 11, 0, 393240, 11, 0, 393252, 11, 0, 393253, 11, 0, 393254, 11, 0, 393255, 11, 0, 393256, 11, 0, 393257, 11, 0, 393258, 11, 0, 393259, 11, 0, 393281, 11, 0, 524265, 11, 0, 458754, 11, 0, 458755, 11, 0, 458756, 11, 0, 458766, 11, 0, 458767, 11, 0, 458768, 11, 0, 458769, 11, 0, 458770, 11, 0, 458771, 11, 0, 458772, 11, 0, 458773, 11, 0, 458774, 11, 0, 458775, 11, 0, 458788, 11, 0, 458789, 11, 0, 458790, 11, 0, 458791, 11, 0, 458792, 11, 0, 458793, 11, 0, 458794, 11, 0, 458817, 11, 0, 589801, 11, 0, 589822, 11, 0, 524290, 11, 0, 524291, 11, 0, 524292, 11, 0, 524296, 11, 0, 524297, 11, 0, 524298, 11, 0, 524299, 15, 0, 524302, 11, 0, 524303, 11, 0, 524304, 11, 0, 524305, 11, 0, 524306, 11, 0, 524307, 11, 0, 524308, 11, 0, 524324, 11, 0, 524325, 11, 0, 524326, 11, 0, 524327, 11, 0, 524328, 11, 0, 524329, 11, 0, 524330, 11, 0, 524334, 11, 0, 524335, 11, 0, 524336, 11, 0, 524337, 11, 0, 524338, 11, 0, 524339, 12, 0, 524353, 11, 0, 655337, 11, 0, 655358, 11, 0, 589826, 11, 0, 589827, 11, 0, 589828, 11, 0, 589829, 12, 0, 589832, 11, 0, 589833, 11, 0, 589834, 11, 0, 589838, 11, 0, 589839, 11, 0, 589840, 11, 0, 589841, 11, 0, 589842, 11, 0, 589860, 11, 0, 589861, 11, 0, 589862, 11, 0, 589863, 11, 0, 589864, 11, 0, 589865, 11, 0, 589866, 11, 0, 589873, 11, 0, 589874, 11, 0, 589889, 11, 0, 720873, 11, 0, 720894, 11, 0, 655362, 11, 0, 655363, 11, 0, 655364, 11, 0, 655368, 11, 0, 655369, 11, 0, 655370, 11, 0, 655372, 15, 0, 655374, 11, 0, 655375, 11, 0, 655376, 11, 0, 655377, 11, 0, 655391, 11, 0, 655392, 11, 0, 655396, 11, 0, 655397, 11, 0, 655398, 11, 0, 655399, 11, 0, 655400, 11, 0, 655401, 11, 0, 655402, 11, 0, 655409, 11, 0, 655410, 11, 0, 655425, 11, 0, 786409, 11, 0, 786430, 11, 0, 720898, 11, 0, 720899, 11, 0, 720900, 11, 0, 720904, 11, 0, 720905, 11, 0, 720906, 11, 0, 720910, 11, 0, 720911, 11, 0, 720932, 11, 0, 720933, 11, 0, 720934, 11, 0, 720935, 11, 0, 720936, 11, 0, 720937, 11, 0, 720938, 11, 0, 720945, 11, 0, 720946, 11, 0, 720948, 12, 0, 720961, 11, 0, 851945, 11, 0, 851966, 11, 0, 786439, 12, 0, 786440, 11, 0, 786441, 11, 0, 786442, 11, 0, 786458, 11, 0, 786472, 11, 0, 786473, 11, 0, 786474, 11, 0, 786475, 11, 0, 786476, 11, 0, 786477, 11, 0, 786478, 11, 0, 786481, 11, 0, 786482, 11, 0, 786497, 11, 0, 917481, 11, 0, 917502, 11, 0, 851976, 11, 0, 851977, 11, 0, 851978, 11, 0, 851979, 11, 0, 851980, 11, 0, 852009, 11, 0, 852010, 11, 0, 852011, 11, 0, 852012, 11, 0, 852013, 11, 0, 852017, 11, 0, 852018, 11, 0, 852033, 11, 0, 983017, 11, 0, 983018, 11, 0, 983019, 11, 0, 983020, 11, 0, 983021, 11, 0, 983022, 11, 0, 983023, 11, 0, 983024, 11, 0, 983025, 11, 0, 983026, 11, 0, 983027, 11, 0, 983028, 11, 0, 983029, 11, 0, 983030, 11, 0, 983031, 11, 0, 983032, 11, 0, 983033, 11, 0, 983034, 11, 0, 983035, 11, 0, 983036, 11, 0, 983037, 11, 0, 983038, 11, 0, 983039, 11, 0, 917504, 11, 0, 917505, 11, 0, 917506, 11, 0, 917507, 11, 0, 917508, 11, 0, 917509, 11, 0, 917510, 11, 0, 917511, 11, 0, 917512, 11, 0, 917513, 11, 0, 917514, 11, 0, 917515, 11, 0, 917516, 11, 0, 917517, 11, 0, 917518, 11, 0, 917519, 11, 0, 917520, 11, 0, 917521, 11, 0, 917525, 11, 0, 917541, 11, 0, 917542, 11, 0, 917545, 11, 0, 917546, 11, 0, 917547, 11, 0, 917548, 11, 0, 917553, 11, 0, 917554, 11, 0, 917555, 12, 0, 917558, 11, 0, 917559, 11, 0, 917560, 11, 0, 917561, 11, 0, 917562, 11, 0, 917563, 11, 0, 917564, 11, 0, 917565, 11, 0, 917566, 11, 0, 917567, 11, 0, 917568, 11, 0, 917569, 11, 0, 1048553, 11, 0, 1048554, 11, 0, 1048555, 11, 0, 1048556, 11, 0, 1048557, 11, 0, 1048558, 11, 0, 1048559, 11, 0, 1048560, 11, 0, 1048561, 11, 0, 1048562, 11, 0, 1048563, 11, 0, 1048564, 11, 0, 1048565, 11, 0, 1048566, 11, 0, 1048567, 11, 0, 1048568, 11, 0, 1048569, 11, 0, 1048570, 11, 0, 1048571, 11, 0, 1048572, 11, 0, 1048573, 11, 0, 1048574, 11, 0, 1048575, 11, 0, 983040, 11, 0, 983041, 11, 0, 983042, 11, 0, 983043, 11, 0, 983044, 11, 0, 983045, 11, 0, 983046, 11, 0, 983047, 11, 0, 983048, 11, 0, 983049, 11, 0, 983050, 11, 0, 983051, 11, 0, 983052, 11, 0, 983053, 11, 0, 983054, 11, 0, 983055, 11, 0, 983056, 11, 0, 983057, 11, 0, 983058, 11, 0, 983059, 11, 0, 983060, 11, 0, 983061, 11, 0, 983062, 11, 0, 983063, 11, 0, 983064, 11, 0, 983065, 11, 0, 983066, 11, 0, 983067, 11, 0, 983068, 11, 0, 983069, 11, 0, 983070, 11, 0, 983071, 11, 0, 983072, 11, 0, 983073, 11, 0, 983074, 11, 0, 983075, 11, 0, 983076, 11, 0, 983077, 11, 0, 983078, 11, 0, 983089, 11, 0, 983090, 11, 0, 983094, 11, 0, 983095, 11, 0, 983096, 11, 0, 983097, 11, 0, 983098, 11, 0, 983099, 11, 0, 983100, 11, 0, 983101, 11, 0, 983102, 11, 0, 983103, 11, 0, 983104, 11, 0, 983105, 11, 0, 1048614, 11, 0, 1048625, 11, 0, 1048626, 11, 0, 1048630, 11, 0, 1114150, 11, 0, 1114151, 11, 0, 1114152, 11, 0, 1114153, 11, 0, 1114154, 11, 0, 1114155, 11, 0, 1114156, 11, 0, 1114157, 11, 0, 1114158, 11, 0, 1114159, 11, 0, 1114160, 11, 0, 1114161, 11, 0, 1114162, 11, 0, 1114163, 11, 0, 1114164, 11, 0, 1114165, 11, 0, 1114166, 11, 0 )

[node name="TileMapBossWorld" type="TileMap" parent="."]
modulate = Color( 0.321569, 0.980392, 0.160784, 0.364706 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 32
collision_mask = 16
format = 1
tile_data = PoolIntArray( -196609, 1610612750, 0, -262144, 1610612750, 0, 327657, 11, 0, 327658, 11, 0, 327659, 11, 0, 327660, 11, 0, 327661, 11, 0, 327662, 11, 0, 327663, 11, 0, 327664, 11, 0, 327665, 11, 0, 327666, 11, 0, 327667, 11, 0, 327668, 11, 0, 327669, 11, 0, 327670, 11, 0, 327671, 11, 0, 327672, 11, 0, 327673, 11, 0, 327674, 11, 0, 327675, 11, 0, 327676, 11, 0, 327677, 11, 0, 327678, 11, 0, 327679, 11, 0, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262147, 11, 0, 262148, 11, 0, 262149, 11, 0, 262150, 11, 0, 262151, 11, 0, 262152, 11, 0, 262153, 11, 0, 262154, 11, 0, 262155, 11, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 0, 262160, 11, 0, 262161, 11, 0, 262162, 11, 0, 262163, 11, 0, 262164, 11, 0, 262165, 11, 0, 262166, 11, 0, 262167, 11, 0, 262168, 11, 0, 262169, 11, 0, 262170, 11, 0, 262171, 11, 0, 262172, 11, 0, 262173, 11, 0, 262174, 11, 0, 262175, 11, 0, 262176, 11, 0, 262177, 11, 0, 262178, 11, 0, 262179, 11, 0, 262180, 11, 0, 262181, 11, 0, 262182, 11, 0, 262183, 11, 0, 262184, 11, 0, 262185, 11, 0, 262186, 11, 0, 262187, 11, 0, 262188, 11, 0, 262189, 11, 0, 262190, 11, 0, 262191, 11, 0, 262192, 11, 0, 262193, 11, 0, 262194, 11, 0, 262195, 11, 0, 262196, 11, 0, 262197, 11, 0, 262198, 11, 0, 262199, 11, 0, 262200, 11, 0, 262201, 11, 0, 262202, 11, 0, 262203, 11, 0, 262204, 11, 0, 262205, 11, 0, 262206, 11, 0, 262207, 11, 0, 262208, 11, 0, 262209, 11, 0, 393193, 11, 0, 327745, 11, 0, 458729, 11, 0, 393281, 11, 0, 524265, 11, 0, 458817, 11, 0, 589801, 11, 0, 524353, 11, 0, 655337, 11, 0, 589889, 11, 0, 720873, 11, 0, 655425, 11, 0, 786409, 11, 0, 720961, 11, 0, 851945, 11, 0, 786497, 11, 0, 917481, 11, 0, 852030, 11, 0, 852033, 11, 0, 983017, 11, 0, 983018, 11, 0, 983019, 11, 0, 983020, 11, 0, 983021, 11, 0, 983022, 11, 0, 983023, 11, 0, 983024, 11, 0, 983025, 11, 0, 983026, 11, 0, 983027, 11, 0, 983028, 11, 0, 983029, 11, 0, 983030, 11, 0, 983031, 11, 0, 983032, 11, 0, 983033, 11, 0, 983034, 11, 0, 983035, 11, 0, 983036, 11, 0, 983037, 11, 0, 983038, 11, 0, 983039, 11, 0, 917504, 11, 0, 917505, 11, 0, 917506, 11, 0, 917507, 11, 0, 917508, 11, 0, 917509, 11, 0, 917510, 11, 0, 917511, 11, 0, 917512, 11, 0, 917513, 11, 0, 917514, 11, 0, 917515, 11, 0, 917516, 11, 0, 917517, 11, 0, 917518, 11, 0, 917519, 11, 0, 917520, 11, 0, 917521, 11, 0, 917522, 11, 0, 917523, 11, 0, 917524, 11, 0, 917525, 11, 0, 917526, 11, 0, 917527, 11, 0, 917528, 11, 0, 917529, 11, 0, 917530, 11, 0, 917531, 11, 0, 917532, 11, 0, 917533, 11, 0, 917534, 11, 0, 917535, 11, 0, 917536, 11, 0, 917537, 11, 0, 917538, 11, 0, 917539, 11, 0, 917540, 11, 0, 917541, 11, 0, 917542, 11, 0, 917558, 11, 0, 917559, 11, 0, 917560, 11, 0, 917561, 11, 0, 917562, 11, 0, 917563, 11, 0, 917564, 11, 0, 917565, 11, 0, 917566, 11, 0, 917567, 11, 0, 917568, 11, 0, 917569, 11, 0, 983078, 11, 0, 983094, 11, 0, 1048614, 11, 0, 1048630, 11, 0, 1114150, 11, 0, 1114151, 11, 0, 1114152, 11, 0, 1114153, 11, 0, 1114154, 11, 0, 1114155, 11, 0, 1114156, 11, 0, 1114157, 11, 0, 1114158, 11, 0, 1114159, 11, 0, 1114160, 11, 0, 1114161, 11, 0, 1114162, 11, 0, 1114163, 11, 0, 1114164, 11, 0, 1114165, 11, 0, 1114166, 11, 0 )

[node name="TileMapTraps" type="TileMap" parent="." groups=[
"trap",
]]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 8 )
collision_layer = 4
format = 1
tile_data = PoolIntArray( 1179647, -536870910, 196608, 1245183, -536870910, 196608, 1310719, -536870910, 196608, 1376255, -536870910, 196608, 1441791, -536870910, 196608, 1507327, -536870910, 196608, 1572863, -536870910, 196608, 1638399, -536870910, 196608, 1572866, 1610612738, 196608, 1572867, 1073741826, 196608, 1572868, 1073741826, 196608, 1703935, -536870910, 196608, 1769471, -536870910, 196608, 1835026, 2, 131073, 1835027, 2, 131073, 1835028, 2, 131073, 1835030, 2, 131073, 1835031, 2, 131073, 1835032, 2, 131073, 1835033, 2, 131073, 1835034, 2, 131073, 1835035, 2, 131073, 1835036, 2, 131073, 1835037, 2, 131073, 1835038, 2, 131073, 1835039, 2, 131073, 1835040, 2, 131073, 1835041, 2, 131073, 1835042, 2, 131073, 1835043, 2, 131073, 1835044, 2, 131073, 2097199, 2, 131073, 2097200, 2, 131073 )

[node name="Props" type="Node2D" parent="."]

[node name="DoorStart" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -169, 208 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScreenShake" parent="." instance=ExtResource( 9 )]
position = Vector2( 1, -1 )

[node name="Boss" parent="." instance=ExtResource( 8 )]
position = Vector2( -312, 224 )
gravity = 6
jump_power = 235

[node name="Areas" type="Node2D" parent="."]

[node name="FallingSpikesArea" type="Area2D" parent="Areas"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/FallingSpikesArea"]
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 504, 160 )
shape = SubResource( 1 )
script = ExtResource( 10 )
color = Color( 0.345098, 0.592157, 0.388235, 1 )
[connection signal="captured" from="InteractiveProps/KamonKey" to="." method="_on_Key_captured"]
[connection signal="player_entered" from="InteractiveProps/Door" to="." method="_on_Door_player_entered"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="body_entered" from="Areas/FallingSpikesArea" to="." method="_on_FallingSpikesArea_body_entered"]
[connection signal="body_exited" from="Areas/FallingSpikesArea" to="." method="_on_FallingSpikesArea_body_exited"]
